@@ -1,3 +1,7 @@
+2016-06-13  Niibe Yutaka  <gniibe@fsij.org>
+
+	* fraucheky.c, usb-msc.c: Update with new USB API.
+
 2016-06-01  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* fraucheky.c (fraucheky_setup_endpoints_for_interface): Call
